# concrete-config

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: lib.rs
tests/: array.toml  basic.rs  bool.toml  enums.toml  floats.toml  full.toml  single_int.toml  static_str.toml  tests.rs  tuple_struct.toml
