[package]
name = "toml-const"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
toml = "1.1"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 0
strip = "symbols"
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
