[package]
name = "concrete-config"
version = "1.0.0"
description = "Set complex build-time constants from a toml file"
license = "EUPL-1.2"
readme = "README.md"
repository = "https://github.com/gabevenberg/concrete-config"
keywords = ["toml", "const", "build-time", "config"]
categories =["config", "development-tools::build-utils", "embedded", "no-std"]
edition = "2024"
rust-version = "1.88"
exclude = ["flake.nix", "flake.lock", "treefmt.nix", ".envrc", "rust-toolchain.toml"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
toml = "1.1"
